# CareerAgent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  config.toml  docker-compose.yml  et --hard 087f3ec  et --hard HEAD@{1}  et --hard ca606c6  et --hard e8ecc96  测试.md
career-planning-ai/: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  STARTUP_GUIDE.md  config.py  config.yaml  database.py  entrypoint.sh  jsconfig.json  main.py  package-lock.json  package.json  pyproject.toml
career-planning-ai/data/: major.txt
career-planning-ai/data/chroma/: chroma.sqlite3
career-planning-ai/data/chroma/798cc6dc-74c3-408f-80be-184a305e80d5/: index_metadata.pickle
career-planning-ai/data/chroma/953cd1c6-a946-4724-bdb8-5b63b4f062c0/: index_metadata.pickle
career-planning-ai/data/chroma/b49a4ca6-c062-44c6-8b45-ee409262fff2/: index_metadata.pickle
career-planning-ai/data/init/chroma/: books_seed.json  init_chroma_seed.py  internships_seed.json  open_source_projects_seed.json  videos_seed.json
career-planning-ai/data/init/milvus/: init_milvus_seed.py  job_matching_profiles_seed.json  job_original_embeddings_seed.json
career-planning-ai/data/init/neo4j/: seed-data.cql
career-planning-ai/docs/: API_DOCUMENT.md  CHAT_API.md  GRAPH_DESIGN.md  GRAPH_LINEAGE.md  Matching_API_思路汇总.md  docker.md
career-planning-ai/docs/api/: code_ability.md  convert.md  graph_path.md  knowledge_tutor.md  matching.md  parse.md  question.md  report.md
career-planning-ai/docs/design/: graph_design.md  matching_overview.md  matching_summary.md
career-planning-ai/src/ai_service/: __init__.py  exceptions.py
career-planning-ai/src/ai_service/agents/: __init__.py  career_analyst_agent.py  common_agent.py  conversation_agent.py  growth_plan_agent.py  knowledge_tutor_agent.py  middleware.py  report_assistant_agent.py  test_question_agent.py  tools.py  user_job_match_analyzer.py
career-planning-ai/src/ai_service/agents/memory/: __init__.py  long_memory_agent.py  memory_compression_agent.py  memory_extraction_agent.py  short_memory_agent.py
career-planning-ai/src/ai_service/engine/: README.md  __init__.py  action_type.py  ai_engine.py  ai_state.py  exceptions.py  job_profile_ai_engine.py
career-planning-ai/src/ai_service/engine/docs/: README.md
career-planning-ai/src/ai_service/models/: __init__.py  aliyun_embedding.py  career_graph.py  graph.py  growth_plan.py  job_info.py  job_portrait.py  job_vector_store.py  memory.py  pdf.py  struct_job_txt.py  struct_txt.py  stu_profile.py  user_form.py  user_form_profile.py  userform.py  userform_profile.py  userform_txt.py  word.py
career-planning-ai/src/ai_service/prompts/: answer_evaluation.txt  career_coach_planner.txt  career_graph_field_explainer.txt  code_ability.txt  extraction_prompt.txt  growth_plan_generation.txt  image_extract_text.txt  image_extract_visual_content.txt  job_profile_system_builder.txt  knowledge_tutor_explainer.txt  pdf_recognition.txt  readme_summary.txt  report_check.txt  report_polish_action.txt  report_polish_general.txt  report_polish_match.txt  small_prompts.yaml  struct_prompt.py  test_question_censorship.txt  test_question_generation_skill.txt  test_question_generation_tool.txt  test_question_modification.txt  user_job_match_analyzer.txt
career-planning-ai/src/ai_service/repository/: career_repository.py  connection_session.py  graph_repository.py  job_info_repository.py  job_portrait_repository.py  session_repository.py  stu_portrait_repository.py
career-planning-ai/src/ai_service/response/: __init__.py  result.py
career-planning-ai/src/ai_service/routers/: __init__.py  chat.py  code_ability.py  convert.py  graph_path.py  knowledge_tutor.py  matching.py  parse.py  process_docx.py  process_userform.py  question.py  report.py  test_question.py
career-planning-ai/src/ai_service/schemas/: __init__.py  auth.py  file.py  report.py
career-planning-ai/src/ai_service/scripts/: .gitignore  __init__.py  get_data.js  zhaopin_spider.py
career-planning-ai/src/ai_service/scripts/js/: get_book.data.js  get_book_detail.js  get_data.js  get_internship_detail.js  get_internships_url_list.js  get_position_data.js  get_video_data.js  (+1 more)
career-planning-ai/src/ai_service/services/: Career_AnalystAgent.py  Job_table_cleaning.py  __init__.py  career_analyst_agent.py  chroma_service.py  code_ability_evaluator.py  database_manage.py  document_analysis_service.py  extract_text.py  file_detector.py  graph_algorithms.py  graph_planner.py  image_extractor.py  job_insert.py  job_knowledge_graph_service.py  job_merger.py  job_profile_builder.py  job_table_cleaning.py  major_aliger.py  pdf_extractor.py  prompt_loader.py  redis_service.py  struct_text_extractor.py  user_job_match_analyzer.py  word_extractor.py
career-planning-ai/src/ai_service/utils/: HDBSCAN.py  __init__.py  ai_token_util.py  aliyun_embedding.py  encrypt_sensitive_data.py  fingerprint_util.py  job_vector_store.py  json_fixer.py  logger_handler.py  magic_numbers.py  path_tool.py  temp_file_handler.py
career-planning-ai/tests/: testAI.py  testMilvus.py  test_word_extractor.py
(+483 files in other folders)
