[project]
name = "ai_service"
version = "0.1.0"
description = ""
authors = [
    {name = "The_cute_cat",email = "qwerty6u7i8o9p0@163.com"}
]
requires-python = ">=3.12,<3.13.0"
dependencies = [
    "poetry-core (>=2.0.0)",
    "fastapi (==0.134.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "pydantic-settings[yaml] (>=2.13.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "supplemental"