[project]
name = "ai_service"
version = "0.1.0"
description = ""
authors = [
    {name = "The_cute_cat",email = "qwerty6u7i8o9p0@163.com"}
]
requires-python = ">=3.12,<3.13.0"
dependencies = [
    # ========== 核心框架 ==========
    "poetry-core (>=2.0.0)",           # Poetry 构建后端核心
    "fastapi (==0.135.1)",             # Web API 框架
    "uvicorn (>=0.41.0,<0.42.0)",      # ASGI 服务器
    "pydantic-settings[yaml] (>=2.13.1,<3.0.0)",  # 配置管理，支持 YAML

    # ========== 安全与认证 ==========
    "bcrypt (>=5.0.0,<6.0.0)",         # 密码哈希加密

    # ========== PDF 处理 ==========
    "pypdf (>=6.7.5,<7.0.0)",          # PDF 读取与解析
    "pymupdf (>=1.27.1,<2.0.0)",       # PDF 文本提取与渲染（高性能）

    # ========== AI/LLM ==========
    "langchain (>=1.2.7,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",  # LangChain 社区集成

    # ========== 文件处理 ==========
    "python-multipart (>=0.0.22,<0.0.23)",  # 文件上传支持
    "puremagic (>=2.0.0,<3.0.0)",      # 纯 Python 文件类型检测（无需 libmagic）
    "binaryornot (>=0.4.4,<0.5.0)",    # 二进制/文本文件判断

    "openai (>=2.24.0,<3.0.0)",

    "langchain-openai (>=1.1.10,<2.0.0)",

    "chardet (>=3.0.2,<6.0.0)", # 不要更新这个依赖的版本!!!
    "pillow (>=12.1.1,<13.0.0)",
    "dashscope (>=1.25.13,<2.0.0)",
    "litellm (>=1.82.2,<2.0.0)",
    "instructor (>=1.14.5,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "langchain-core (>=1.2.19,<2.0.0)",
    "python-docx (>=1.1.0,<2.0.0)",
    "docling (>=2.15.0,<3.0.0)",
    "rapidfuzz (>=3.14.3,<4.0.0)",
    "pymilvus (>=2.6.10,<3.0.0)",
    "selenium (>=4.41.0,<5.0.0)",
    "hdbscan (>=0.8.41,<0.9.0)",
    "umap-learn (>=0.5.11,<0.6.0)",
    "chromadb (>=1.5.5,<2.0.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)",
    "opentelemetry-proto (>=1.30.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "neo4j (>=6.1.0,<7.0.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "certifi (>=2026.2.25,<2027.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "pymoo (>=0.6.1.6,<0.7.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "sentence-transformers (>=5.3.0,<6.0.0)",
    "leidenalg (>=0.11.0,<0.12.0)",
    "igraph (>=1.0.0,<2.0.0)",
    "aiomysql (>=0.3.2,<0.4.0)",
    "asyncmy (>=0.2.11,<0.3.0)",
    "streamlit (>=1.56.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "supplemental"

[tool.poetry.group.dev.dependencies]
pandas-stubs = "3.0.0.260204"